navbar css done

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     
     <nav>
-        RazorPay
+        <div class="header-logo">RazorPay</div>
         <ul>
-            <li>Info</li>
-            <li>Quote</li>
-            <li>Sign up</li>
+            <li><a href="#info">Info</a></li>
+            <li><a href="#quote">Quote</a></li>
+            <li><a href="#sign-up">Sign Up</a></li>
+        
         </ul>
     </nav>
 
