--- a/index.html
+++ b/index.html
@@ -5,23 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RazorPay</title>
     <link rel="stylesheet" href="./styles.css">
-    <script defer src="./script.js"></script>
+    <!-- <script defer src="./script.js"></script> -->
 </head>
 <body>
     
     
+   
     <nav>
         <div class="row1">
             <div><a href="#"><img src="./public/nav-logo.png" alt="" class="header-logo"></a></div>
-            <div class="hamburger">
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
+            <label for="nav-toggle" class="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            </div>
+            </label>
             <ul class="nav-menu">
-                <li><a href="#info" class="nav-link">Info</a></li>
-                <li><a href="#quote" class="nav-link">Quote</a></li>
-                <li><a href="#signup" class="nav-link">Sign Up</a></li>
+                <li>
+                    <a href="#info" class="nav-link">
+                        <label for="nav-toggle">Info</label>
+                    </a>
+                </li>
+                <li>
+                    <a href="#quote" class="nav-link">
+                        <label for="nav-toggle">Quote</label>
+                    </a>
+                </li>
+                <li>
+                    <a href="#signup" class="nav-link">
+                        <label for="nav-toggle">Sign Up</label>
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="intro">
